force-app/main/default/objects/Project_Quotient__c/Project_Quotient__c.object-meta.xml
<CustomObject>
    <label>Project Quotient</label>
    <nameField>
        <displayFormat>PQ-{0000}</displayFormat>
        <label>Project Quotient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Quotients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>