force-app/main/default/objects/Project_Quotient__c/fields/Current_Shelf_Life__c.field-meta.xml
<CustomField>
    <fullName>Current_Shelf_Life__c</fullName>
    <label>Current Shelf Life</label>
    <length>255</length>
    <type>Text</type>
</CustomField>