force-app/main/default/objects/Project_Quotient__c/fields/Sample_Project_Application__c.field-meta.xml
<CustomField>
    <fullName>Sample_Project_Application__c</fullName>
    <label>Sample/Project/Application</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Quotients</relationshipLabel>
    <relationshipName>Project_Quotients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>