force-app/main/default/objects/Project_Quotient__c/fields/SSC_Code__c.field-meta.xml
<CustomField>
    <fullName>SSC_Code__c</fullName>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>