force-app/main/default/objects/Project_Quotient__c/fields/Usage_Level__c.field-meta.xml
<CustomField>
    <fullName>Usage_Level__c</fullName>
    <label>Usage Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>