force-app/main/default/objects/Project_Quotient__c/validationRules/LostReason_Is_Mandatory_Stage_is_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>LostReason_Is_Mandatory_Stage_is_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, &apos;Lost&apos;) , ISBLANK(Lost_Reason__c ))</errorConditionFormula>
    <errorDisplayField>Lost_Reason__c</errorDisplayField>
    <errorMessage>Lost Reason is Manadatory</errorMessage>
</ValidationRule>