force-app/main/default/objects/Project_Quotient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SSC_Code__c</columns>
    <columns>Product_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Stage__c</columns>
    <columns>Sample_Project_Application__c</columns>
    <columns>Comments__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Current_Shelf_Life__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Usage_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>